# watchlist_tracker

./: README.md  pyproject.toml
scripts/: daily_check.sh
src/watchlist_tracker/: __init__.py  __main__.py
src/watchlist_tracker/application/: __init__.py  services.py
src/watchlist_tracker/domain/: __init__.py  markets.py  models.py
src/watchlist_tracker/infrastructure/: __init__.py  database.py
src/watchlist_tracker/infrastructure/notifications/: __init__.py  telegram_notifier.py
src/watchlist_tracker/infrastructure/providers/: __init__.py  base.py  yfinance_provider.py
src/watchlist_tracker/interfaces/: cli.py
