[project]
name = "watchlist-tracker"
version = "0.1.0"
description = "Personal stock watchlist tracker with alerts and technical indicators."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "pandas>=2.0.0,<3.0",
    "pandas-ta>=0.3.14b",
    "yfinance>=0.2.54",
    "tinydb>=4.8.2",
    "rich>=14.3.3",
    "typer>=0.24.1",
    "apscheduler>=3.10.4",
]

[project.scripts]
watchlist = "watchlist_tracker.interfaces.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/watchlist_tracker"]